--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -143,7 +143,6 @@ button.reset-selection-button
 
 .related-products-container
   padding: 0
-  grid-area: related
 
 .related-products-title
   font-size: 1.5em
